--- a/src/app/ui/image/image.component.scss
+++ b/src/app/ui/image/image.component.scss
@@ -13,6 +13,7 @@
     border-radius: 5px;
     text-decoration: none;
     display: none;
+    cursor: pointer;
   }
   .download-icon {
     position: absolute;
